--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,20 +1,20 @@
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
 
 html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
 }
+
+:root {
+  --background: #ffffff;
+  --foreground: #171717;
+  --primaryColor:#A020F0;
+  /* --primaryColor:#00771a; */
+  --secondaryColor:rgba(31, 41, 55, 0.1);
+  --grey: #f4f4f4;
+}
+
 
 body {
   color: var(--foreground);
@@ -35,8 +35,9 @@ a {
   text-decoration: none;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+.wrapper{
+  width: 95%;
+  margin: 0 auto;
 }
+
+ul{ list-style: none;}
